adding google analytics

--- a/index.html
+++ b/index.html
@@ -127,5 +127,14 @@
         [<a href="http://de.wikipedia.org/wiki/Datei:Plate-KA-PA777.JPG" title="Kfz-Kennzeichen mit FE-Schrift">2</a>]
       </p>
     </div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-510991-5");
+pageTracker._trackPageview();
+} catch(err) {}</script>
   </body>
 </html>
